--- a/Smart Trash.css
+++ b/Smart Trash.css
@@ -27,7 +27,7 @@ h1,H2{
 .sidebar {
     height: 100%;
     width: 160px;
-    position: fixed;
+    position:relative;
     z-index: 1;
     top: 0;
     right: 0;
